# reqt

./: .clang-format  .clang-tidy  .gitmodules  .yamlfmt.yml  .yamllint.yml  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  docker.sh  makefile  requirements.txt
cmake/: ccache-launcher.in  ccache.cmake
requirements/: fizzbuzz_hlr.json  fizzbuzz_llr.json
schemas/: llr.json  requirement.json
script/: generate_plantuml.py  main.py
src/: json_parser.cpp  json_parser.hpp  main.cpp  person_schema.json
test/: json_parser_test.cpp
